--- a/DarkEngines/src/components/darkengines-app/darkengines-app.template.html
+++ b/DarkEngines/src/components/darkengines-app/darkengines-app.template.html
@@ -1,6 +1,6 @@
 ﻿<app-header reveals>
   <app-toolbar>
-    <paper-icon-button icon="menu" onclick="drawer.toggle()"></paper-icon-button>
+    <paper-icon-button icon="menu" on-click="toggle"></paper-icon-button>
     <div main-title>My app</div>
     <paper-icon-button icon="delete"></paper-icon-button>
     <paper-icon-button icon="search"></paper-icon-button>
